[package]
name = "approximate-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
boomphf = { version = "0.5.9", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
eyre = "0.6.8"
probabilistic-collections = { version = "0.7.0", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.160"
serde_json = "1.0.96"
sucds = "0.7.0"
